# boxexata2

./: .env.example  .env.local  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.agent/skills/: exatabot_claude_skills.md
.backup-css-pre-exata/: styles.css.bak
.github/workflows/: ci.yml
doc/: CONFIGURACAO.md  INTEGRACAO_WHATSAPP.md  SYSTEM_DOCUMENTATION.md  exatabot_guia_desenvolvimento.md
migrations/: env.py
migrations/versions/: 001_create_message_logs.py  002_create_broker_profiles.py  003_create_properties.py  004_add_is_available_to_properties.py
scripts/: setup.sh  sync_properties.py
src/application/services/: auth_service.py  humanizer.py  i_preference_extractor.py  llm_extractor.py  message_log_middleware.py  property_presenter.py  regex_extractor.py
src/application/use_cases/: handle_message.py  notify_new_listings.py
src/domain/entities/: broker_profile.py  message_log.py  property_listing.py  session.py  subscription.py
src/domain/repositories/: i_broker_profile_repository.py  i_message_gateway.py  i_message_log_repository.py  i_property_repository.py  i_session_store.py  i_subscription_store.py
src/domain/value_objects/: money.py  phone_number.py
src/infrastructure/cache/: memory_cache.py  (+1 more)
src/presentation/: admin_router.py  security.py  webhook.py
src/shared/: circuit_breaker.py  config.py  container.py  context.py  logger.py
tests/fakes/: fake_property_repository.py  fake_session_store.py  spy_message_gateway.py
tests/integration/: test_exata_scraper.py
tests/unit/: test_admin_router.py  test_auth_service.py  test_circuit_breaker.py  test_fakes.py  test_farewell_handler.py  test_handle_message.py  test_humanizer.py  test_llm_extractor.py  test_message_log_middleware.py  test_money.py  test_multi_tenant_concurrency.py  test_notify_new_listings.py  test_null_log_repository.py  test_phone_number.py  test_redis_cache.py  test_redis_store.py  test_redis_subscription_store.py  test_regex_extractor.py  test_session.py  test_sql_broker_profile_repository.py  test_sql_log_repository.py  test_subscription.py  test_webhook.py
(+23 files in other folders)
